2010-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Rearrange widgets in a table, make stuff look a lot nicer.

2010-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Add a comment.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Add flags.
	  Allow deleting all items from projects/contexts/flags
	  Change button to update or add.
	  Factor out some common functions.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	  Activate debug logging.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Make StartWindow loggable.
	  Handle failures when getting lists or adding to show CouchDB
	  is not running.
	  Fix shopping list count by getting by context, although we're
	  still wrong since we count closed shopping items too.

2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Add 'add' to add a thing.
	  Add getThingsByContext functions.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Make due date button/unsetting work.
	  Start implementing add_thing so we can reuse dialog for
	  editing existing things.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Add error dialog.
	  Only show list of things if we didn't have an error.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-context (added):
	* couchdb/views/by-context/map.js (added):
	  Add a view to get things by context.

2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/error.py (added):
	  Add a window to show an error.
	  Ugly right now, improve later.

2010-04-26  Thomas Vander Stichele  <thomas at apestaart dot org>
