@@ -1,3 +1,9 @@
+2010-08-30  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/maemo/start.py:
+	  Use the add/edit widget when clicking on a thing in a list, so
+	  we can update it later.
+
 2010-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/maemo/new.py:
